tests/duarouter/alternatives/style2_input/errors/routealt/routealt_last_negative/errors.duarouter
Error: Negative index of a route alternative (id='!1').
Quitting (on error).
